// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsightsCommandButton renders per snapshot with extra className combined with its own 1`] = `
<DocumentFragment>
  <mock-mockconstructor
    appearance="transparent"
    classname="insightsCommandButton test-extra-class-name"
  >
    <span
      class="text"
    />
    <span
      class="menuIcon"
    />
  </mock-mockconstructor>
</DocumentFragment>
`;

exports[`InsightsCommandButton renders per snapshot with extra className combined with its own: mockConstructor props 1`] = `
{
  "appearance": "transparent",
  "children": [
    <span
      className="text"
    />,
    <span
      className="menuIcon"
    />,
  ],
  "className": "insightsCommandButton test-extra-class-name",
  "icon": undefined,
}
`;

exports[`InsightsCommandButton renders per snapshot with extra icon className combined with its own 1`] = `
<DocumentFragment>
  <mock-mockconstructor
    appearance="transparent"
    classname="insightsCommandButton"
    iconprops="[object Object]"
  >
    <span
      class="text"
    />
    <span
      class="menuIcon"
    />
  </mock-mockconstructor>
</DocumentFragment>
`;

exports[`InsightsCommandButton renders per snapshot with extra icon className combined with its own: mockConstructor props 1`] = `
{
  "appearance": "transparent",
  "children": [
    <span
      className="text"
    />,
    <span
      className="menuIcon"
    />,
  ],
  "className": "insightsCommandButton",
  "icon": undefined,
  "iconProps": {
    "className": "icon-class-name",
  },
}
`;

exports[`InsightsCommandButton renders per snapshot with iconProps passed through 1`] = `
<DocumentFragment>
  <mock-mockconstructor
    appearance="transparent"
    classname="insightsCommandButton"
    iconprops="[object Object]"
  >
    <span
      class="text"
    />
    <span
      class="menuIcon"
    />
  </mock-mockconstructor>
</DocumentFragment>
`;

exports[`InsightsCommandButton renders per snapshot with iconProps passed through: mockConstructor props 1`] = `
{
  "appearance": "transparent",
  "children": [
    <span
      className="text"
    />,
    <span
      className="menuIcon"
    />,
  ],
  "className": "insightsCommandButton",
  "icon": undefined,
  "iconProps": {
    "testProperty": "test-value",
  },
}
`;

exports[`InsightsCommandButton renders per snapshot with props passed through 1`] = `
<DocumentFragment>
  <mock-mockconstructor
    appearance="transparent"
    classname="insightsCommandButton"
    text="test-text"
  >
    <span
      class="text"
    >
      test-text
    </span>
    <span
      class="menuIcon"
    />
  </mock-mockconstructor>
</DocumentFragment>
`;

exports[`InsightsCommandButton renders per snapshot with props passed through: mockConstructor props 1`] = `
{
  "appearance": "transparent",
  "children": [
    <span
      className="text"
    >
      test-text
    </span>,
    <span
      className="menuIcon"
    />,
  ],
  "className": "insightsCommandButton",
  "icon": undefined,
  "text": "test-text",
}
`;